--- a/conf/TNGR_APP/template.yaml
+++ b/conf/TNGR_APP/template.yaml
@@ -3,13 +3,13 @@ kind: Deployment
 metadata:
   creationTimestamp: null
   labels:
-    app: my-app
-  name: my-app
+    app: ${APP_NAME}
+  name: ${APP_NAME}
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: my-app
+      app: ${APP_NAME}
   strategy: {}
   template:
     metadata:
@@ -18,8 +18,8 @@ spec:
         app: my-app
     spec:
       containers:
-      - image: localhost:5000/my-app-im
-        name: my-app-im-w8fvd
+      - image: ${DOCKER_REPO_URL}/${DOCKER_IMAGE_NORMALIZED_NAME}
+        name: ${DOCKER_IMAGE_NORMALIZED_NAME}-con
         resources: {}
       imagePullSecrets:
       - name: myregistrykey
