--- a/conf/TNGR_APP/template.yaml
+++ b/conf/TNGR_APP/template.yaml
@@ -29,7 +29,7 @@ spec:
     spec:
       containers:
       - image: ${DOCKER_REPO_URL}/${DOCKER_IMAGE_NORMALIZED_NAME}
-        name: ${DOCKER_IMAGE_NORMALIZED_NAME}-con
+        #name: ${DOCKER_IMAGE_NORMALIZED_NAME}-con
         resources: {}
       imagePullSecrets:
       - name: myregistrykey
