--- a/conf/TNGR_APP/template.yaml
+++ b/conf/TNGR_APP/template.yaml
@@ -31,6 +31,9 @@ spec:
       - image: ${DOCKER_REPO_URL}/${DOCKER_IMAGE_NORMALIZED_NAME}
         name: ${DOCKER_IMAGE_NORMALIZED_NAME}
         resources: {}
+        env:
+        - name: NODE_ENV
+          value: ${TARGET_ENV}
       imagePullSecrets:
       - name: myregistrykey
 status: {}
