--- a/conf/db/template.yaml
+++ b/conf/db/template.yaml
@@ -90,7 +90,7 @@ metadata:
   labels:
     aim: support
     env: build
-    service: tngr-mysql-database
+    service: mysql
 spec:
   selector:
     matchLabels:
