--- a/conf/db/template.yaml
+++ b/conf/db/template.yaml
@@ -14,6 +14,7 @@ metadata:
   labels:
     type: local
 spec:
+  storageClassName: manual
   capacity:
     storage: 1Gi
   accessModes:
@@ -44,7 +45,7 @@ metadata:
     type: local
 spec:
   capacity:
-    storage: 10Gi
+    storage: 5Gi
   accessModes:
     - ReadWriteOnce
   hostPath:
@@ -55,6 +56,7 @@ kind: PersistentVolumeClaim
 metadata:
   name: first-claim
 spec:
+  storageClassName: manual
   accessModes:
     - ReadWriteOnce
   resources:
@@ -66,6 +68,7 @@ kind: PersistentVolumeClaim
 metadata:
   name: second-claim
 spec:
+  storageClassName: manual
   accessModes:
     - ReadWriteOnce
   resources:
@@ -77,6 +80,7 @@ kind: PersistentVolumeClaim
 metadata:
   name: third-claim
 spec:
+  storageClassName: manual
   accessModes:
     - ReadWriteOnce
   resources:
