--- a/conf/TNGR_APP/template.yaml
+++ b/conf/TNGR_APP/template.yaml
@@ -50,6 +50,9 @@ spec:
       containers:
       - image: ${DOCKER_REPO_URL}/${DOCKER_IMAGE_NORMALIZED_NAME}
         name: ${DOCKER_IMAGE_NORMALIZED_NAME}
+        volumeMounts:
+        - name: ${NORMALIZED_APP_NAME}-vol
+          mountPath: /opt/uploads
         resources: {}
         env:
         - name: NODE_ENV
